syntax = "proto3";

package api;

option go_package = "api";
import "github.com/mwitkow/go-proto-validators/validator.proto";

service GeoDB {
    rpc Ping(PingRequest) returns(PingResponse){};
    rpc Upsert(UpsertRequest) returns(UpsertResponse){};
    rpc Get(GetRequest) returns(GetResponse){};
    rpc Delete(DeleteRequest) returns(DeleteResponse){};
    rpc Stream(StreamRequest) returns(stream StreamResponse){};
}

message StreamRequest {}

message StreamResponse {
    Data data =1;
}

message UpsertRequest {
    map<string, Data> data =1;
}

message UpsertResponse {}

message GetRequest {
    repeated string keys =1;
}

message GetResponse {
    map<string, Data> data= 1;
}

message DeleteRequest {
    repeated string keys =1;
}

message DeleteResponse {}

message PingRequest {}

message PingResponse {
    bool ok =1;
}

message Point {
    double lat =1;
    double lon =2;
}

message Data {
    string key =1;
    Point point =2;
    int64 radius =3;
    map<string, string> metadata =4;
    int64 updated_unix =5;
}